--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             </a>
 
             <!-- Links -->
-            <ul class="navbar__links">
+            <ul class="navbar__links clicked">
                 <li class="navbar__link"><a href="#">Home</a></li>
                 <li class="navbar__link"><a href="#">Product</a></li>
                 <li class="navbar__link"><a href="#">FAQ</a></li>
@@ -72,7 +72,7 @@
             </div>
             
             <div class="work__steps">
-                <img src="/img/app-2.png" alt="" class="work__step--img">
+                <img src="/img/app-3.png" alt="" class="work__step--img">
                 <div class="work__step--text">
                     <h3 class="work__step--name">Checkout</h3>
                     <h2 class="work__step--heading">When you done check out
@@ -88,8 +88,8 @@
                 <h2 class="download__text--heading">Download the app</h2>
                 <p class="download__text--desc">Available on your favorite store. Start your premium experience now</p>
                 <div class="download__btn">
-                    <button class="btn home__btn--playstore">Playstore</button>
-                    <button class="btn home__btn--appstore">App store</button>
+                    <button class="btn download__btn--playstore">Playstore</button>
+                    <button class="btn download__btn--appstore">App store</button>
                 </div>
             </div>
         </div>
