--- a/index.html
+++ b/index.html
@@ -42,10 +42,12 @@
             </div>
         </div>
 
+        <!-- Img -->
         <div class="img">
             <img src="/img/appimg.png" alt="" class="img__app--img">
         </div>
 
+        <!-- Work -->
         <div class="work">
             <div class="work__underline"></div>
             <div class="work__heading">How the app works</div>
@@ -82,7 +84,7 @@
                 </div>
             </div>
         </div>
-
+        <!-- Download -->
         <div class="download">
             <div class="download__text">
                 <h2 class="download__text--heading">Download the app</h2>
@@ -93,7 +95,7 @@
                 </div>
             </div>
         </div>
-
+        <!-- Footer -->
         <div class="footer">
             <a href="/">
                 <img src="/img/logo.png" alt="" class="footer__logo">
