--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="main.js">
 </head>
 <body>
     <div class="app">
@@ -62,7 +63,7 @@
                 </div>
             </div>
             
-            <div class="work__steps">
+            <div class="work__steps side-right">
                 <img src="/img/app-2.png" alt="" class="work__step--img">
                 <div class="work__step--text">
                     <h3 class="work__step--name">Explore varieties</h3>
